welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:15: error: not found: value levebrosse
  levebrosse()
  ^PatternPicture:64: error: not found: value defmotifVert
defmotifVert(c:Color){
^